crates/sui-prover/tests/snapshots/dynamic_field/exists_.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_field/exists_.fail.move:20:5
   │
20 │     ensures(!dynamic_field::exists_(&x.id, 11u8));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_field/exists_.fail.move:17: foo_spec
