crates/sui-prover/tests/snapshots/dynamic_field/issue-237.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
Verification successful
warning: UID object type not found, dynamic fields will be placed under UID
   ┌─ tests/inputs/dynamic_field/issue-237.fail.move:19:5
   │
19 │     dynamic_field::borrow_mut(id, version)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
