crates/sui-prover/tests/snapshots/dynamic_field/uid.missing.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
🦀 No specifications are marked for verification. Nothing to verify.
