crates/sui-prover/tests/snapshots/dynamic_field/uid_param.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
Verification successful
warning: UID object type not found, dynamic fields will be placed under UID
   ┌─ tests/inputs/dynamic_field/uid_param.ok.move:15:5
   │
15 │     df::add(uid, WhitelistKey { address: addr }, true);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
